--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,10 @@ body {
     font-weight: 700 !important;
 
 }
+#bestSells .owl-dots,
+#products .owl-dots {
+    display: none;
+}
 
 .selected-page a {
     color: var(--navColor) !important;
@@ -538,7 +542,8 @@ header {
 
 @media (max-width: 600px) {
     .c-logos .logo-wrapper {
-        grid-template-columns: repeat(2, 1fr); /* 2 columns */
+        display: none !important;
+        
     }
 
 
@@ -1051,39 +1056,39 @@ footer .copyright .copy-links div a {
 }
 
 
-.blog-section .daily-post {
+.daily-post {
     border: .5px solid #0005;
     box-shadow: 0px 0px 5px #0005;
     margin: 20px 0px;
 }
 
-.blog-section .daily-post img {
+.daily-post img {
     width: 100%;
     height: auto;
     border-bottom: 2.5px solid var(--navColor);
 }
 
-.blog-section .daily-blog-content h5 {
+ .daily-blog-content h5 {
     font-size: 22px;
     margin: 10px 0px;
     font-weight: 400;
 }
 
-.blog-section .daily-blog-content h5 a {
+ .daily-blog-content h5 a {
     color: #000;
 }
 
-.blog-section .daily-blog-content h5:hover a {
+ .daily-blog-content h5:hover a {
     color: blue;
 }
 
-.blog-section .daily-blog-content .blog-up-detail {
+.daily-blog-content .blog-up-detail {
     gap: 20px;
     margin:10px 0px 20px 0px;
     font-weight: 300;
     font-size: 14px;
 }
-.blog-section .daily-blog-content .blog-up-detail a {
+ .daily-blog-content .blog-up-detail a {
     color: rgba(0, 0, 0, 0.709);
     
 }
@@ -1119,12 +1124,87 @@ footer .copyright .copy-links div a {
 .suggestions .suggest {
     gap: 10px;
     margin: 10px 0px; 
+    cursor: pointer;
 }
 
-.suggestions .suggest h6 a {
+.suggestions .suggest h5 a {
     color: #000;
 }
 
-.suggestions .suggest:hover a {
+.suggestions .suggest h5:hover a {
     color: blue;
+}
+
+@media (max-width: 767px) {
+    .suggestions {
+      display: none;
+    }
+}
+
+
+/* Blog header section start */
+
+.blog-main-content {
+    width: 100%;
+    position: relative;
+}
+
+.blog-main-content .bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 90vh;
+    z-index: -1;
+    background-color: var(--bgColor);
+}
+
+.blog-main-content .blog-header {
+}
+
+.blog-content {
+    border: .5px solid #0005;
+    box-shadow: 0px 0px 8px #0005;
+    margin: 20px 0px 80px 0px;
+    background: #fff;
+}
+
+.blog-content h4 {
+    position: relative;
+    background-color: var(--bg2);
+    line-height: 1.8;
+    padding: 0px 10px;
+}
+
+.blog-content .blog-details {
+    padding: 0px 10px;
+    margin: 20px 0px;
+}
+
+.blog-content .blog-img-right-details,
+.blog-content .blog-img-left-details {
+    padding: 0px 10px;
+    margin: 10px 0px;
+}
+
+.blog-content .blog-img-right-details img,
+.blog-content .blog-img-left-details img {
+    border: .5px solid #0005
+}
+
+details summary {
+    color: var(--navColor);
+}
+
+details p {
+    padding: 10px;
+    background-color: var(--navColor);
+    color: #fff;
+}
+
+.blog-content .blog-img-right-details p,
+.blog-content .blog-img-left-details p,
+.blog-details p {
+    font-size: 18px;
+    line-height: 1.5;
 }
