--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
     padding: 0;
 }
 
+
 a {
     text-decoration: none;
 }
@@ -1515,3 +1516,60 @@ table tr td a.delete-all:hover {
 .cart-totals .total {
     color: var(--navColor);
 }
+
+
+.alert-success {
+    padding: 10px;
+    border-radius: .3rem;
+    border: .5px solid green;
+    line-height: 1;
+}
+
+
+/* profils section */
+.profile-section {
+    margin: 80px 0px;
+    padding:20px 0px;
+    width: 100%;
+    min-height: 80vh;
+}
+
+.option {
+    cursor: pointer;
+    transition: .3s;
+    margin: 5px 0px;
+}
+
+.option:hover {
+    transform: translateX(10px);
+    color: #1a9cb7;
+}
+
+.option.active {
+    transform: translateX(10px);
+    color: #1a9cb7;
+}
+
+
+.list-options h4 {
+    line-height: 1;
+}
+
+/* profile contetn section */
+.profile-img {
+    overflow: hidden;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.profile-img img {
+    object-fit: cover;
+    -o-object-fit: cover;
+    object-position: center center;
+    -o-object-position: center center;
+    width: 100%;
+    height: 100%;
+}
+
+/* carts content section */
