updated profile section

--- a/css/style.css
+++ b/css/style.css
@@ -1572,4 +1572,34 @@ table tr td a.delete-all:hover {
     height: 100%;
 }
 
-/* carts content section */
+
+.list-options {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+
+    max-height: 300vh;
+    overflow: hidden;
+    transition: max-height 0.3s;
+}
+
+.list-options.show {
+    max-height: 300vh; /* Adjust as per content height */
+    transition: max-height 0.3s;
+}
+
+@media (max-width: 767px) {
+    .list-options {
+        max-height: 0; 
+        transition: max-height 0.3s;
+        margin-bottom: 20px;
+    }
+    /* .toggler {
+        display: flex !important;
+    } */
+}
